--- a/src/main/react-app/public/style.css
+++ b/src/main/react-app/public/style.css
@@ -19,93 +19,6 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-  display: block;
-}
-
-body {
-  line-height: 1;
-}
-
-ol, ul {
-  list-style: none;
-}
-
-blockquote, q {
-  quotes: none;
-}
-
-blockquote:before, blockquote:after,
-q:before, q:after {
-  content: '';
-  content: none;
-}
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-.about {
-  margin: 70px auto 40px;
-  padding: 8px;
-  width: 260px;
-  font: 10px/18px 'Lucida Grande', Arial, sans-serif;
-  color: #bbb;
-  text-align: center;
-  text-shadow: 0 -1px rgba(0, 0, 0, 0.3);
-  background: #383838;
-  background: rgba(34, 34, 34, 0.8);
-  border-radius: 4px;
-  background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3));
-  background-image: -moz-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3));
-  background-image: -o-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3));
-  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3));
-  -webkit-box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.2), 0 0 6px rgba(0, 0, 0, 0.4);
-  box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.2), 0 0 6px rgba(0, 0, 0, 0.4);
-}
-.about a {
-  color: #eee;
-  text-decoration: none;
-  border-radius: 2px;
-  -webkit-transition: background 0.1s;
-  -moz-transition: background 0.1s;
-  -o-transition: background 0.1s;
-  transition: background 0.1s;
-}
-.about a:hover {
-  text-decoration: none;
-  background: #555;
-  background: rgba(255, 255, 255, 0.15);
-}
-
-.about-links {
-  height: 30px;
-}
-.about-links > a {
-  float: left;
-  width: 50%;
-  line-height: 30px;
-  font-size: 12px;
-}
-
-.about-author {
-  margin-top: 5px;
-}
-.about-author > a {
-  padding: 1px 3px;
-  margin: 0 -1px;
-}
-
-/*
-* Author: Pali madra
- * URI: http://www.agilewebsitedev.com
-                   and
-         http://www.agileseo.net
- * Licensed under the MIT License:
- * https://www.opensource.org/licenses/mit-license.php
- */
 body {
   font: 13px/20px 'Lucida Grande', Verdana, sans-serif;
   color: #404040;
@@ -169,7 +82,18 @@ body {
   line-height: 24px;
   font-size: 14px;
   font-weight: bold;
-  color: #34bf6e;  
+  color: #eee;
+  background: #34bf6e;
+}
+
+.tasks-delete {
+  float: right;        
+  margin: 2px;
+  line-height: 24px;
+  font-size: 14px;
+  font-weight: bold;
+  color: #eee;
+  background: #34bf6e;
 }
 
 .tasks-lists {
@@ -184,6 +108,7 @@ body {
   text-shadow: none;
   color: transparent;
 }
+
 .tasks-lists:before {
   content: '';
   display: block;
@@ -204,6 +129,7 @@ body {
   -ms-user-select: none;
   user-select: none;
 }
+
 .tasks-list-item + .tasks-list-item {
   border-top: 1px solid #f0f2f3;
 }
@@ -222,6 +148,7 @@ body {
   border: 2px solid #c4cbd2;
   border-radius: 12px;
 }
+
 .tasks-list-mark:before {
   content: '';
   display: none;
@@ -239,9 +166,11 @@ body {
   -o-transform: rotate(-45deg);
   transform: rotate(-45deg);
 }
+
 .tasks-list-cb:checked ~ .tasks-list-mark {
   border-color: #39ca74;
 }
+
 .tasks-list-cb:checked ~ .tasks-list-mark:before {
   display: block;
 }
@@ -250,6 +179,7 @@ body {
   font-weight: bold;
   color: #8a9a9b;
 }
+
 .tasks-list-cb:checked ~ .tasks-list-desc {
   color: #34bf6e;
   text-decoration: line-through;
